2005-06-24  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/config.rb (mobile_agent): add a new method.
	* hiki/page.rb, plugin/00default.rb: support mobile agents.

	* hiki/repos/svn.rb: code cleanup.
	* misc/hikifarm/index.cgi: revise the condition whether the
	repository is local.

2005-06-23  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/command.rb (generate_page): support 'toc' and 'toc_here'
	plugins.
	* plugin/00default.rb (toc_here): add a new plugin method.
	(toc): display table of content at the top of the text for
	backword compatibility.

2005-06-23  Kouhei Yanagita <sugi@dream.big.or.jp>
	* hiki/config.rb (load), hikiconf.rb.sample: most of the instance variables
	of Config class are now configurable in hikiconf.rb.

2005-06-23  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/config.rb, plugin/00default.rb, plugin/en/00default.rb,
	plugin/fr/00default.rb, plugin/it/00default.rb,
	plugin/ja/00default.rb, template/hiki.conf: support configuration
	of using the WikiName feature (by NAGASAKI).

	* data/text/TextFormattingRules,
	misc/text/default/TextFormattingRules: update (by fumifumi).

	* style/default/parser.rb (parse): fix a bug in parsing plugins in
	pre-formatted texts.

	* style/default/parser.rb (parse_line): the format of table
	headers is changed from '||~' to '||!' (suggested by Kouhei
	Yanagita).

	* hiki/command.rb, hiki/plugin.rb, hiki/db/flatfile.rb,
	template/edit.html: support minor change edit that does not update
	the timestamp (by hadai).
	* messages/en.rb, messages/fr.rb, messages/it.rb, messages/ja.rb:
	add 'msg_update_timestamp'.

	* hiki/command.rb (cmd_edit): preserve keywords in preview mode.
	escapeHTML keywords.

2005-06-22  Kouhei Yanagita <sugi@dream.big.or.jp>
	* theme/hiki/hiki.css: revise the default theme.

2005-06-22  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/command.rb (cmd_edit), template/edit.html: support
	'{{toc}}' in the preview mode.

	* plugin/00default.rb (toc), hiki/command.rb (generate_page),